tests/snapshots/snapshots__detail_github_repo_migration.snap
---
source: tests/snapshots.rs
expression: html
---
<!doctype html>
<html lang="en" class="" data-palette="neutral">
<head>
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1">
  <meta name="csrf-token" content="demo-csrf-token">
  <meta name="htmx-config" content='{"includeIndicatorStyles":false,"allowEval":false,"allowScriptTags":false}'>
  <title>GitHub – repo migration (on demand) · you-spin-me</title>
  <link rel="stylesheet" href="/assets/dist/app.css?v=[hash]">
  <link rel="icon" href="/assets/dist/favicon.svg?v=[hash]" type="image/svg+xml">
  <script src="/assets/vendor/htmx/htmx.min.js?v=[hash]" defer></script>
  <script src="/assets/js/app.js?v=[hash]" defer></script>
</head>
<body class="min-h-screen bg-background text-foreground antialiased" hx-headers='{"X-CSRF-Token": "demo-csrf-token"}'>
  
  <div class="bg-destructive text-white text-center text-xs py-1">Insecure dev auth: every visitor is an admin. Do not expose this instance.</div>
  
  <header class="sticky top-0 z-40 border-b bg-background/80 backdrop-blur">
    <div class="mx-auto flex h-14 max-w-6xl items-center gap-3 px-4">
      <a href="/" class="flex items-center gap-2 font-semibold [&>svg]:size-5">
        <svg
  aria-hidden="true"
  xmlns="http://www.w3.org/2000/svg"
  width="24"
  height="24"
  viewBox="0 0 24 24"
  fill="none"
  stroke="currentColor"
  stroke-width="2"
  stroke-linecap="round"
  stroke-linejoin="round"
>
  <path d="M2.586 17.414A2 2 0 0 0 2 18.828V21a1 1 0 0 0 1 1h3a1 1 0 0 0 1-1v-1a1 1 0 0 1 1-1h1a1 1 0 0 0 1-1v-1a1 1 0 0 1 1-1h.172a2 2 0 0 0 1.414-.586l.814-.814a6.5 6.5 0 1 0-4-4z" />
  <circle cx="16.5" cy="7.5" r=".5" fill="currentColor" />
</svg>
        <span>you-spin-me</span>
      </a>
      <div class="ms-auto flex items-center gap-1">
        <button type="button" class="btn hidden sm:inline-flex text-muted-foreground" data-variant="outline" data-size="sm" data-palette-open aria-label="Search keys" aria-keyshortcuts="Control+K Meta+K">
          <svg
  aria-hidden="true"
  xmlns="http://www.w3.org/2000/svg"
  width="24"
  height="24"
  viewBox="0 0 24 24"
  fill="none"
  stroke="currentColor"
  stroke-width="2"
  stroke-linecap="round"
  stroke-linejoin="round"
>
  <path d="m21 21-4.34-4.34" />
  <circle cx="11" cy="11" r="8" />
</svg>
          <span class="pe-4">Search keys…</span>
          <kbd class="kbd">⌘K</kbd>
        </button>
        <button type="button" class="btn sm:hidden" data-variant="ghost" data-size="icon" data-palette-open aria-label="Search keys">
          <svg
  aria-hidden="true"
  xmlns="http://www.w3.org/2000/svg"
  width="24"
  height="24"
  viewBox="0 0 24 24"
  fill="none"
  stroke="currentColor"
  stroke-width="2"
  stroke-linecap="round"
  stroke-linejoin="round"
>
  <path d="m21 21-4.34-4.34" />
  <circle cx="11" cy="11" r="8" />
</svg>
        </button>
        <button type="button" class="btn" data-variant="ghost" data-size="icon" data-theme-toggle aria-label="Toggle dark mode">
          <span class="dark:hidden"><svg
  aria-hidden="true"
  xmlns="http://www.w3.org/2000/svg"
  width="24"
  height="24"
  viewBox="0 0 24 24"
  fill="none"
  stroke="currentColor"
  stroke-width="2"
  stroke-linecap="round"
  stroke-linejoin="round"
>
  <path d="M20.985 12.486a9 9 0 1 1-9.473-9.472c.405-.022.617.46.402.803a6 6 0 0 0 8.268 8.268c.344-.215.825-.004.803.401" />
</svg></span>
          <span class="hidden dark:inline"><svg
  aria-hidden="true"
  xmlns="http://www.w3.org/2000/svg"
  width="24"
  height="24"
  viewBox="0 0 24 24"
  fill="none"
  stroke="currentColor"
  stroke-width="2"
  stroke-linecap="round"
  stroke-linejoin="round"
>
  <circle cx="12" cy="12" r="4" />
  <path d="M12 2v2" />
  <path d="M12 20v2" />
  <path d="m4.93 4.93 1.41 1.41" />
  <path d="m17.66 17.66 1.41 1.41" />
  <path d="M2 12h2" />
  <path d="M20 12h2" />
  <path d="m6.34 17.66-1.41 1.41" />
  <path d="m19.07 4.93-1.41 1.41" />
</svg></span>
        </button>
        <button type="button" class="btn" data-variant="ghost" data-size="icon" data-palette-cycle aria-label="Change colour palette" title="Colour palette">
          <svg
  aria-hidden="true"
  xmlns="http://www.w3.org/2000/svg"
  width="24"
  height="24"
  viewBox="0 0 24 24"
  fill="none"
  stroke="currentColor"
  stroke-width="2"
  stroke-linecap="round"
  stroke-linejoin="round"
>
  <path d="M12 22a1 1 0 0 1 0-20 10 9 0 0 1 10 9 5 5 0 0 1-5 5h-2.25a1.75 1.75 0 0 0-1.4 2.8l.3.4a1.75 1.75 0 0 1-1.4 2.8z" />
  <circle cx="13.5" cy="6.5" r=".5" fill="currentColor" />
  <circle cx="17.5" cy="10.5" r=".5" fill="currentColor" />
  <circle cx="6.5" cy="12.5" r=".5" fill="currentColor" />
  <circle cx="8.5" cy="7.5" r=".5" fill="currentColor" />
</svg>
        </button>
        <span class="hidden md:inline-flex items-center gap-1 px-2 text-sm text-muted-foreground [&>svg]:size-4">
          <svg
  aria-hidden="true"
  xmlns="http://www.w3.org/2000/svg"
  width="24"
  height="24"
  viewBox="0 0 24 24"
  fill="none"
  stroke="currentColor"
  stroke-width="2"
  stroke-linecap="round"
  stroke-linejoin="round"
>
  <path d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z" />
  <path d="m9 12 2 2 4-4" />
</svg>
          dev-admin
        </span>
        
      </div>
    </div>
  </header>
  <main class="mx-auto max-w-6xl px-4 py-6">
    
<div class="flex flex-col gap-6">
  <a href="/" class="inline-flex w-fit items-center gap-1 text-sm text-muted-foreground hover:text-foreground [&>svg]:size-4">
    <svg
  aria-hidden="true"
  xmlns="http://www.w3.org/2000/svg"
  width="24"
  height="24"
  viewBox="0 0 24 24"
  fill="none"
  stroke="currentColor"
  stroke-width="2"
  stroke-linecap="round"
  stroke-linejoin="round"
>
  <path d="m15 18-6-6 6-6" />
</svg> All keys
  </a>

  

  <div class="flex flex-wrap items-start justify-between gap-4">
    <div class="flex flex-col gap-1">
      <h1 class="text-2xl font-semibold tracking-tight">GitHub – repo migration (on demand)</h1>
      <div class="flex flex-wrap items-center gap-2 text-sm text-muted-foreground">
        <span class="badge state-badge" data-state="on-demand"><span class="state-dot"></span>On demand</span>
        <span class="badge" data-variant="outline">github</span>
        <span>owned by david</span>
        <code class="text-xs">github-repo-migration</code>
      </div>
    </div>
    <div class="flex flex-wrap gap-2">
      
      
      <a class="btn"  href="https://github.com/settings/personal-access-tokens/new" target="_blank" rel="noopener noreferrer" data-track-open="/keys/github-repo-migration/opened" title="Opening the create page is recorded">
            Create <svg
  aria-hidden="true"
  xmlns="http://www.w3.org/2000/svg"
  width="24"
  height="24"
  viewBox="0 0 24 24"
  fill="none"
  stroke="currentColor"
  stroke-width="2"
  stroke-linecap="round"
  stroke-linejoin="round"
>
  <path d="M15 3h6v6" />
  <path d="M10 14 21 3" />
  <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6" />
</svg>
          </a>
      
      
      
    </div>
  </div>

  

  <div class="grid gap-4 md:grid-cols-2">
    
    <div class="card">
      <header>
        <h2>On demand</h2>
        <p>Created when needed and deleted right after. Never stored, so there is nothing to expire or alert on.</p>
      </header>
      <section>
        <dl class="kv">
          <dt>Last opened</dt>
          <dd>12d ago <span class="text-muted-foreground">by david</span></dd>
        </dl>
        <p class="mt-3 text-sm text-muted-foreground">Opening the provider's create page with <em>Create</em> is recorded here and as a Kubernetes Event. Whether a token was actually created there is not visible to this app.</p>
      </section>
    </div>
    

    <div class="card">
      <header>
        <h2>Setup</h2>
        <p>How the key is configured at the provider.</p>
      </header>
      <section class="flex flex-col gap-3">
        
        <div class="flex flex-wrap gap-1.5">
          <span class="badge" data-variant="secondary">administration: write</span><span class="badge" data-variant="secondary">contents: write</span>
        </div>
        
        
      </section>
    </div>

    <div class="card">
      <header>
        <h2>Targets</h2>
        <p>Written automatically when a new key is submitted.</p>
      </header>
      <section>
        
        
        <p class="text-sm text-muted-foreground">None: on-demand keys are never stored.</p>
        
        
      </section>
    </div>

    <div class="card">
      <header>
        <h2>Update by hand</h2>
        <p>Places the key must be changed manually after rotating.</p>
      </header>
      <section>
        
        <p class="text-sm text-muted-foreground">Nothing listed.</p>
        
      </section>
    </div>
  </div>

  <div class="card">
    <header>
      <h2>History</h2>
      <p>The last 1 events.</p>
    </header>
    <section>
      
      <div class="table-container">
        <table class="table">
          <thead><tr><th>When</th><th>What</th><th>By</th><th>Expires</th></tr></thead>
          <tbody>
            
            <tr><td>2026-09-14 12:00 UTC</td><td>Opened create page</td><td>david</td><td>—</td></tr>
            
          </tbody>
        </table>
      </div>
      
    </section>
  </div>
</div>

  </main>
  


  <dialog id="command-palette" class="command-dialog" aria-label="Search keys">
    <div class="command">
      <header>
        <svg
  aria-hidden="true"
  xmlns="http://www.w3.org/2000/svg"
  width="24"
  height="24"
  viewBox="0 0 24 24"
  fill="none"
  stroke="currentColor"
  stroke-width="2"
  stroke-linecap="round"
  stroke-linejoin="round"
>
  <path d="m21 21-4.34-4.34" />
  <circle cx="11" cy="11" r="8" />
</svg>
        <input type="search" name="q" placeholder="Search keys…" autocomplete="off" aria-label="Search keys"
               hx-get="/search" hx-trigger="input changed delay:150ms, search, palette-open" hx-target="#command-results">
      </header>
      <div id="command-results" role="menu" aria-orientation="vertical" data-empty="No keys found."></div>
    </div>
  </dialog>
</body>
</html>
